[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/block7.png" type="Texture" id=1]
[ext_resource path="res://scenes/block/Block.gd" type="Script" id=2]

[node name="Block" type="RigidBody2D"]
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Shape1" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -20, -30, -20, 10, 0, 10, 0, 30, 20, 30, 20, -10, 0, -10, 0, -30 )
disabled = true

[node name="Shape2" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -30, 20, -10, 20, -10, 0, 30, 0, 30, -20, -30, -20 )
disabled = true

[node name="Shape3" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -10, -50, 10, -50, 10, 50, -10, 50 )
disabled = true

[node name="Shape4" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -30, -20, 30, -20, 30, 20, 10, 20, 10, 0, -30, 0 )
disabled = true

[node name="Shape5" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 0, -30, 20, -30, 20, 10, 0, 10, 0, 30, -20, 30, -20, -10, 0, -10 )
disabled = true

[node name="Shape6" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -20, -30, 0, -30, 0, -10, 20, -10, 20, 10, 0, 10, 0, 30, -20, 30 )
disabled = true

[node name="Shape7" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -20, -20, 20, -20, 20, 20, -20, 20 )
disabled = true

[node name="SpriteTween" type="Tween" parent="."]

[node name="CollisionTween" type="Tween" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Block_body_entered"]
